# Web-Site

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  index.scss
assets/: main.scss
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: blog.rs  footer.rs  footer_component.rs  header.rs  header_component.rs  hero.rs  home.rs  login_button_component.rs  login_dialog_component.rs  mod.rs  not_found.rs
src/components/auth/: login.rs  register.rs  sign_in.rs  sign_up.rs
src/components/header/: header.rs  mod.rs  navbar.rs  user_navbar.rs
src/components/navigation/: navbar.rs
src/functions/: is_admin.rs  is_auth.rs  mod.rs
src/pages/: about.rs  home.rs  home_page.rs  login_page.rs  mod.rs  not_found_page.rs
src/pages/admin/: home.rs
src/pages/auth/: login.rs  sign_in.rs  sign_up.rs
src/routes/: admin.rs  app.rs  everyone.rs  mod.rs  panel.rs
src/utils/: mod.rs
src/utils/routes/: app_route.rs  mod.rs
