[package]
name = "sycamore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] } # usato
sycamore = { version = "0.9.1", features = ["suspense"] } # usato
sycamore-router = "0.9.1" # usato
sycamore-rstml = { path = "sycamore_rstml" } # usato
sycamore-web = "0.9.1" # usato
sycamore-core = "0.9.1"
sycamore-futures = "0.9.1"
sycamore-macro = "0.9.1"
sycamore-reactive = "0.9.1"
sycamore-router-macro = "0.9.1"
gloo-net = { version = "0.6.0", features = ["http"] } # usato