[package]
name = "sycamore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] } # usato
serde_json = { version = "1.0.104", features = ["preserve_order"] } # usato
sycamore = { version = "0.9.1", features = ["suspense"] } # usato
sycamore-router = "0.9.1" # usato
sycamore-rstml = { path = "sycamore_rstml" } # usato
sycamore-web = "0.9.1" # usato
sycamore-core = "0.9.1"
sycamore-futures = "0.9.1"
sycamore-macro = "0.9.1"
sycamore-reactive = "0.9.1"
sycamore-router-macro = "0.9.1"
http = "1.3.1"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
gloo-net = "0.6.0"